--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -7,6 +7,9 @@ name = "dioxus-simple-pdf-tools"
 
 # HTML title tag content
 title = "dioxus-simple-pdf-tools"
+# The application will be served at domain.com/dioxus-simple-pdf-tools/, so we need to modify the base_path to the path where the application will be served
+base_path = "dioxus-simple-pdf-tools"
+out_dir = "docs"
 
 # include `assets` in web platform
 [web.resource]
