--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.39"
-dioxus = { version = "0.6.1", features = ["router", "fullstack"] }
+dioxus = { version = "0.6.1", features = ["router"] }
 lopdf = "0.34.0"
 regex = "1.11.1"
 web-sys = { version = "0.3.76", features = ["Blob", "BlobPropertyBag", "Url"] }
